[gd_scene load_steps=2 format=3 uid="uid://dl22uju6ygrp0"]

[ext_resource type="Script" uid="uid://bt6txdh0jok31" path="res://Scripts/Menus/menu_configuracao.gd" id="1_ojjoo"]

[node name="MenuConfiguracao" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ojjoo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37488, 0.3692, 0.71, 1)

[node name="LabelTitulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Configurações"

[node name="ButtonVoltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -77.0
offset_right = 77.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Voltar"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -20.0
offset_right = 22.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelGameplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Gameplay"
horizontal_alignment = 1

[node name="AimAllTime" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Controlar o indicador de direção tempo todo"

[node name="TrackingColor" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Desativar transparência do Indicador de direção "

[node name="LabelAudio" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Audio"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
columns = 2

[node name="LabelMusicaMenu" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Volume Música Menu"

[node name="HSliderMusicaMenu" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
value = -20.0

[node name="LabelMusicaPartida" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Volume Música Partida"

[node name="HSliderMusicaPartida" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -35.0
max_value = -10.0
value = -25.0

[node name="LabelEffects" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Volume Efeitos Sonoros"

[node name="HSliderEffects" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -20.0
max_value = 20.0

[connection signal="pressed" from="ButtonVoltar" to="." method="_on_button_voltar_pressed"]
[connection signal="toggled" from="VBoxContainer/AimAllTime" to="." method="_on_aim_all_time_toggled"]
[connection signal="toggled" from="VBoxContainer/TrackingColor" to="." method="_on_tracking_color_toggled"]
[connection signal="drag_ended" from="VBoxContainer/GridContainer/HSliderMusicaMenu" to="." method="_on_h_slider_musica_menu_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/GridContainer/HSliderMusicaPartida" to="." method="_on_h_slider_musica_partida_drag_ended"]
[connection signal="drag_ended" from="VBoxContainer/GridContainer/HSliderEffects" to="." method="_on_h_slider_effects_drag_ended"]
